#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(epolltest,1.0)
AM_INIT_AUTOMAKE(epolltest,1.0)
AC_CONFIG_SRCDIR([epoll_client.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([bzero inet_ntoa memset socket])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
